--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <button onclick="hello();">Click here</button>
+  </body>
 </html>
